[package]
name = "actix-elastic"
version = "1.0.0"
authors = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
license = "MIT"
description = "elasticsearch 7.x actix actor"
keywords = ["actix", "elasticsearch", "actix-web"]
repository = "https://github.com/GopherJ/actix-elastic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.2.1"
elasticsearch = { version = "7.9.0-alpha.1", default-features = false, features = ["rustls-tls"] }
pin-project = "0.4.26"
futures = { version = "0.3.6" }
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.58"
bytes = "0.5.6"
url = "2.1.1"
actix = "0.10.0"
thiserror = "1.0.21"
