[package]
authors     = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "elasticsearch 7.x actix actor"
edition     = "2018"
keywords    = ["actix", "elasticsearch", "actix-web"]
license     = "MIT"
name        = "actix-elastic"
repository  = "https://github.com/GopherJ/actix-elastic"
version     = "1.0.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix         = "0.10.0"
backoff       = "0.2.1"
bytes         = "0.5.6"
elasticsearch = { version = "7.10.0-alpha.1", default-features = false, features = ["rustls-tls"] }
futures       = { version = "0.3.6" }
log           = "0.4.11"
pin-project   = "0.4.26"
serde         = "1.0.116"
serde_json    = "1.0.58"
thiserror     = "1.0.21"
url           = "2.1.1"

[features]
default = []

v5 = []
